k8s/payment-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: rnd
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: dimaspratama04/istio-payment:v1.0.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: rnd
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: payment
