k8s/product-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: rnd
  labels:
    app: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: dimaspratama04/istio-product:v1.0.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: rnd
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: product
