k8s/istio-hide-server-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: hide-server-header
  namespace: rnd
spec:
  # Apply this to the Ingress Gateway
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: MERGE
        value:
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
            # Set to PASS_THROUGH to stop Envoy from appending its own "server: envoy" header
            server_header_transformation: PASS_THROUGH
